Added text for homepage hero

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <p>Hi! I am</p>
+    <h1>Ashlee Bartley</h1>
+    <h2>front-end developer based in Kentucky</h2>
+  </body>
 </html>
