--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alegreya:wght@500&family=Lato:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -19,7 +25,7 @@
     ></script>
   </head>
   <body>
-    <p>Hi! I am</p>
+    <p>Hi! <br />I am</p>
     <h1>Ashlee Bartley</h1>
     <h2>front-end developer based in Kentucky</h2>
   </body>
