--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     ></script>
   </head>
   <body>
-    <p>Hi! <br />I am</p>
-    <h1>Ashlee Bartley</h1>
-    <h2>front-end developer based in Kentucky</h2>
+    <div class="hero">
+      <p>Hi! <br />I am</p>
+      <h1>Ashlee Bartley</h1>
+      <h2>front-end developer based in Kentucky</h2>
+    </div>
   </body>
 </html>
