Started HTML & CSS for content

--- a/index.html
+++ b/index.html
@@ -31,5 +31,33 @@
       <h2>front-end developer based in Kentucky</h2>
       <a href="#" class="btn btn-dark px-3 py-3 mt-3">More About Me</a>
     </div>
+
+    <p class="content">Check out my favorite projects below!</p>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="" alt="" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <h2>Weather App</h2>
+          <p class="content">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic sequi
+            quisquam consequatur commodi voluptatem fugit voluptatum numquam
+            soluta cum maiores accusamus dolore deleniti, maxime corporis beatae
+            voluptatibus reprehenderit deserunt eaque?
+          </p>
+          <a href="#" title="">Launch Weather App</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6"></div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6"></div>
+      </div>
+    </div>
   </body>
 </html>
