Added images to content section

--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="" alt="" />
+          <img src="images/weather.png" alt="Weather App" class="img-fluid" />
         </div>
-      </div>
-      <div class="row">
         <div class="col-sm-6">
           <h2>Weather App</h2>
           <p class="content">
@@ -49,14 +47,23 @@
             soluta cum maiores accusamus dolore deleniti, maxime corporis beatae
             voluptatibus reprehenderit deserunt eaque?
           </p>
-          <a href="#" title="">Launch Weather App</a>
+          <a href="#" title="Weather App">Launch Weather App</a>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-6"></div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6"></div>
+        <div class="col-sm-6">
+          <h2>Yoga App</h2>
+          <p class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            atque itaque quaerat natus nisi ex illo magni possimus eaque. Et vel
+            itaque omnis explicabo praesentium nesciunt beatae sit quo rerum.
+          </p>
+          <a href="#" title="Yoga App">Launch Yoga App</a>
+        </div>
+
+        <div class="col-sm-6">
+          <img src="images/yoga.png" alt="Yoga App" class="img-fluid" />
+        </div>
       </div>
     </div>
   </body>
