Added CSS to content links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             soluta cum maiores accusamus dolore deleniti, maxime corporis beatae
             voluptatibus reprehenderit deserunt eaque?
           </p>
-          <a href="#" title="Weather App">Launch Weather App</a>
+          <a href="#" class="btn btn-dark px-3 py-3 mt-3" title="Weather App"
+            >Launch Weather App</a
+          >
         </div>
       </div>
       <div class="row">
@@ -58,7 +60,9 @@
             atque itaque quaerat natus nisi ex illo magni possimus eaque. Et vel
             itaque omnis explicabo praesentium nesciunt beatae sit quo rerum.
           </p>
-          <a href="#" title="Yoga App">Launch Yoga App</a>
+          <a href="#" class="btn btn-dark px-3 py-3 mt-3" title="Yoga App"
+            >Launch Yoga App</a
+          >
         </div>
 
         <div class="col-sm-6">
