Added media query to content section

--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
     <p class="content">Check out my favorite projects below!</p>
 
     <div class="container">
-      <div class="row">
+      <div class="row mt-5">
         <div class="col-sm-6">
-          <img src="images/weather.png" alt="Weather App" class="img-fluid" />
+          <img
+            src="images/weather.png"
+            alt="Weather App"
+            class="img-fluid d-none d-sm-block"
+          />
         </div>
         <div class="col-sm-6">
           <h2>Weather App</h2>
@@ -52,7 +56,7 @@
           >
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-5 mb-5">
         <div class="col-sm-6">
           <h2>Yoga App</h2>
           <p class="content">
@@ -66,7 +70,11 @@
         </div>
 
         <div class="col-sm-6">
-          <img src="images/yoga.png" alt="Yoga App" class="img-fluid" />
+          <img
+            src="images/yoga.png"
+            alt="Yoga App"
+            class="img-fluid d-none d-sm-block"
+          />
         </div>
       </div>
     </div>
