Added content to about.html

--- a/about.html
+++ b/about.html
@@ -24,5 +24,15 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Hi, I am Ashlee Bartley</h1>
+    <h2>Frontend Developer, based in Kentucky</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora cumque
+      quis iure incidunt ullam, similique fuga et voluptas id, animi commodi
+      cupiditate ut fugiat dolore, reiciendis quos error voluptatibus vero!
+    </p>
+    <a href="#">See my projects</a>
+    <img src="images/ashleebartley.jpg" class="img-fluid rounded" />
+  </body>
 </html>
