Started CSS on about.html

--- a/about.html
+++ b/about.html
@@ -25,14 +25,23 @@
     ></script>
   </head>
   <body>
-    <h1>Hi, I am Ashlee Bartley</h1>
-    <h2>Frontend Developer, based in Kentucky</h2>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora cumque
-      quis iure incidunt ullam, similique fuga et voluptas id, animi commodi
-      cupiditate ut fugiat dolore, reiciendis quos error voluptatibus vero!
-    </p>
-    <a href="#">See my projects</a>
-    <img src="images/ashleebartley.jpg" class="img-fluid rounded" />
+    <div class="about-me container">
+      <div class="row">
+        <div class="col-md-6 about-hero">
+          <h1>Hi, I'm Ashlee Bartley</h1>
+          <h2>Frontend Developer, based in Kentucky</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora
+            cumque quis iure incidunt ullam, similique fuga et voluptas id,
+            animi commodi cupiditate ut fugiat dolore, reiciendis quos error
+            voluptatibus vero!
+          </p>
+          <a href="#">See my projects</a>
+        </div>
+        <div class="col-md-6">
+          <img src="images/ashleebartley.jpg" class="img-fluid rounded" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
