Linked about.html to index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p>Hi! <br />I am</p>
       <h1>Ashlee Bartley</h1>
       <h2>front-end developer based in Kentucky</h2>
-      <a href="#" class="btn btn-dark px-3 py-3 mt-3">More About Me</a>
+      <a href="about.html" class="btn btn-dark px-3 py-3 mt-3">More About Me</a>
     </div>
 
     <p class="content">Check out my favorite projects below!</p>
