--- a/work.html
+++ b/work.html
@@ -24,5 +24,17 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-4">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-6">
+            <img src="images/weather.png" class="img-fluid" />
+            <h3>Weather Project</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
