--- a/work.html
+++ b/work.html
@@ -29,9 +29,17 @@
       <div class="content">
         <h1 class="mb-4">Take a look at what I've been working on!</h1>
         <div class="row">
-          <div class="col-6">
-            <img src="images/weather.png" class="img-fluid" />
-            <h3>Weather Project</h3>
+          <div class="col-md-6 mb-4">
+            <img src="images/weather.png" class="img-fluid mb-3 rounded" />
+            <h3 class="text-center">Weather Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS, & Javascript
+            </p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="images/yoga.png" class="img-fluid mb-3 rounded" />
+            <h3 class="text-center">Yoga Project</h3>
+            <p class="text-center text-muted">Built with HTML & CSS</p>
           </div>
         </div>
       </div>
