Linked btn on about.html

--- a/about.html
+++ b/about.html
@@ -36,7 +36,9 @@
             animi commodi cupiditate ut fugiat dolore, reiciendis quos error
             voluptatibus vero!
           </p>
-          <a href="#" class="btn btn-dark px-3 py-3 mt-3">See my projects</a>
+          <a href="work.html" class="btn btn-dark px-3 py-3 mt-3"
+            >See my projects</a
+          >
         </div>
         <div class="col-md-6">
           <img src="images/ashleebartley.jpg" class="img-fluid rounded" />
