Added contact btn to work.html

--- a/work.html
+++ b/work.html
@@ -42,6 +42,9 @@
             <p class="text-center text-muted">Built with HTML & CSS</p>
           </div>
         </div>
+        <a href="contact.html" class="btn btn-dark px-3 py-3 mt-3 mb-3"
+          >Contact me</a
+        >
       </div>
     </div>
   </body>
