--- a/about.html
+++ b/about.html
@@ -25,6 +25,15 @@
     ></script>
   </head>
   <body>
+    <nav>
+      <img src="" alt="" />
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Work</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
     <div class="about-me container">
       <div class="row">
         <div class="col-md-6 about-hero">
