--- a/about.html
+++ b/about.html
@@ -25,15 +25,18 @@
     ></script>
   </head>
   <body>
-    <nav>
-      <img src="" alt="" />
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Work</li>
-        <li>Contact</li>
-      </ul>
+    <div class="container"></div>
+    <nav class="d-flex justify-content-between">  
+        <img src="images/ABlogo.png" class="logo" alt="logo" />
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Work</li>
+          <li>Contact</li>
+        </ul>
+      </div>
     </nav>
+    </div>
     <div class="about-me container">
       <div class="row">
         <div class="col-md-6 about-hero">
