Added CSS to nav bar

--- a/about.html
+++ b/about.html
@@ -27,12 +27,12 @@
   <body>
     <div class="container"></div>
     <nav class="d-flex justify-content-between">  
-        <img src="images/ABlogo.png" class="logo" alt="logo" />
+        <img src="images/ABlogo.png" class="logo d-none d-lg-block" alt="logo" />
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Work</li>
-          <li>Contact</li>
+          <li><a href="/index.html"> Home</a></li>
+          <li class="active"><a href="/about.html"> About</a></li>
+          <li><a href="/work.html"> Work</a></li>
+          <li><a href="/contact.html"> Contact</a></li>
         </ul>
       </div>
     </nav>
