Added nav bar to all pages

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
     ></script>
   </head>
   <body>
+        <div class="container"></div>
+    <nav class="d-flex justify-content-between"> 
+        <a href="/index.html"> 
+        <img src="images/ABlogo.png" class="logo d-none d-lg-block" alt="logo" /></a>
+        <ul>
+          <li class="active"><a href="/index.html"> Home</a></li>
+          <li><a href="/about.html"> About</a></li>
+          <li><a href="/work.html"> Work</a></li>
+          <li><a href="/contact.html"> Contact</a></li>
+        </ul>
+    </nav>
+    </div>
     <div class="hero">
       <p>Hi! <br />I am</p>
       <h1>Ashlee Bartley</h1>
