--- a/about.html
+++ b/about.html
@@ -26,15 +26,15 @@
   </head>
   <body>
     <div class="container"></div>
-    <nav class="d-flex justify-content-between">  
-        <img src="images/ABlogo.png" class="logo d-none d-lg-block" alt="logo" />
+    <nav class="d-flex justify-content-between"> 
+        <a href="/index.html"> 
+        <img src="images/ABlogo.png" class="logo d-none d-lg-block" alt="logo" /></a>
         <ul>
           <li><a href="/index.html"> Home</a></li>
           <li class="active"><a href="/about.html"> About</a></li>
           <li><a href="/work.html"> Work</a></li>
           <li><a href="/contact.html"> Contact</a></li>
         </ul>
-      </div>
     </nav>
     </div>
     <div class="about-me container">
