--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,22 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/index.html">
+          <img
+            src="images/ABlogo.png"
+            class="logo d-none d-lg-block"
+            alt="logo"
+        /></a>
+        <ul>
+          <li><a href="/index.html"> Home</a></li>
+          <li><a href="/about.html"> About</a></li>
+          <li><a href="/work.html"> Work</a></li>
+          <li class="active"><a href="/contact.html"> Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-4">Let's get in touch!</h1>
