--- a/work.html
+++ b/work.html
@@ -25,6 +25,22 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/index.html">
+          <img
+            src="images/ABlogo.png"
+            class="logo d-none d-lg-block"
+            alt="logo"
+        /></a>
+        <ul>
+          <li><a href="/index.html"> Home</a></li>
+          <li><a href="/about.html"> About</a></li>
+          <li class="active"><a href="/work.html"> Work</a></li>
+          <li><a href="/contact.html"> Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-4">Take a look at what I've been working on!</h1>
@@ -42,9 +58,11 @@
             <p class="text-center text-muted">Built with HTML & CSS</p>
           </div>
         </div>
-        <a href="contact.html" class="btn btn-dark px-3 py-3 mt-3 mb-3"
-          >Contact me</a
-        >
+        <div class="contact-btn">
+          <a href="contact.html" class="btn btn-dark px-3 py-3 mt-3 mb-3"
+            >Contact me</a
+          >
+        </div>
       </div>
     </div>
   </body>
