--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/2ad9100694.js" crossorigin="anonymous"></script>
   </head>
   <body>
         <div class="container"></div>
@@ -89,6 +90,21 @@
           />
         </div>
       </div>
+      <footer>
+        <a href="mailto:ashleenikol13@gmail.com" class="email-link">ashleenikol13@gmail.com</a>
+        <div class="social-links">
+          <a href="">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+        <a href="">
+<i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        
+        </div>
+      </footer>
     </div>
   </body>
 </html>
