Added social links

--- a/index.html
+++ b/index.html
@@ -91,15 +91,17 @@
         </div>
       </div>
       <footer>
+        <div class="d-flex justify-content-center mb-5">
         <a href="mailto:ashleenikol13@gmail.com" class="email-link">ashleenikol13@gmail.com</a>
-        <div class="social-links">
-          <a href="">
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.twitter.com/ashleenikol">
             <i class="fa-brands fa-twitter"></i>
           </a>
-        <a href="">
+        <a href="https://www.instagram.com/ashleenikol">
 <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="">
+        <a href="https://www.github.com/ashleenikol">
           <i class="fa-brands fa-github"></i>
         </a>
         
