--- a/index.html
+++ b/index.html
@@ -91,20 +91,28 @@
         </div>
       </div>
       <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h4>Work Inquiry</h4>
+          <p class="text-muted">Let's work together!</p>
+          </div>
+          <div>
+          <a href="#" class="btn btn-dark px-3 py-3 mt-3">Contact me</a>
+          </div>
+        </div>
         <div class="d-flex justify-content-center mb-5">
         <a href="mailto:ashleenikol13@gmail.com" class="email-link">ashleenikol13@gmail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.twitter.com/ashleenikol">
+          <a href="https://www.twitter.com/ashleenikol" target="_blank">
             <i class="fa-brands fa-twitter"></i>
           </a>
-        <a href="https://www.instagram.com/ashleenikol">
+        <a href="https://www.instagram.com/ashleenikol" target="_blank">
 <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="https://www.github.com/ashleenikol">
+        <a href="https://www.github.com/ashleenikol" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
-        
         </div>
       </footer>
     </div>
