Added footers to all pages & started SEO

--- a/work.html
+++ b/work.html
@@ -69,5 +69,18 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://www.twitter.com/ashleenikol" target="_blank">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="https://www.instagram.com/ashleenikol" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://www.github.com/ashleenikol" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
