--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ashlee Bartley is a frontend developer based in Kentucky. She is self-taught through SheCodes, which she highly recommends to other female developers." />
     <title>Ashlee Bartley | Front-end developer based in Kentucky</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -29,12 +30,12 @@
         <div class="container"></div>
     <nav class="d-flex justify-content-between"> 
         <a href="/index.html"> 
-        <img src="images/ABlogo.png" class="logo d-none d-lg-block" alt="logo" /></a>
+        <img src="images/ABlogo.png" class="logo d-none d-lg-block" alt="Ashlee Bartley's logo" /></a>
         <ul>
-          <li class="active"><a href="/index.html"> Home</a></li>
-          <li><a href="/about.html"> About</a></li>
-          <li><a href="/work.html"> Work</a></li>
-          <li><a href="/contact.html"> Contact</a></li>
+          <li class="active"><a href="/index.html" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About Ashlee Bartley"> About</a></li>
+          <li><a href="/work.html" title="Ashlee Bartley's projects"> Work</a></li>
+          <li><a href="/contact.html" title="Contact Ashlee Bartley"> Contact</a></li>
         </ul>
     </nav>
     </div>
