--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="About Ashlee Bartley, a frontend developer based in Kentucky. She is self-taught through SheCodes, which she highly recommends to other female developers." />
+    
     <title>Ashlee Bartley | Front-end developer based in Kentucky</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -29,7 +31,7 @@
     <div class="container"></div>
     <nav class="d-flex justify-content-between"> 
         <a href="/index.html"> 
-        <img src="images/ABlogo.png" class="logo d-none d-lg-block" alt="logo" /></a>
+        <img src="images/ABlogo.png" class="logo d-none d-lg-block" alt="Ashlee Bartley's logo" /></a>
         <ul>
           <li><a href="/index.html"> Home</a></li>
           <li class="active"><a href="/about.html"> About</a></li>
@@ -70,6 +72,8 @@
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
+                      <p>This website was coded by Ashlee Bartley & is <a href="https://github.com/ashleenikol/portfolio-project.git">open-sourced</a>. </p>
+
     </footer>
   </body>
 </html>
