--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact Ashlee Bartley, a frontend developer based in Kentucky."
+    />
+
     <title>Ashlee Bartley | Front-end developer based in Kentucky</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -35,7 +40,7 @@
           <img
             src="images/ABlogo.png"
             class="logo d-none d-lg-block"
-            alt="logo"
+            alt="Ashlee Bartley's logo"
         /></a>
         <ul>
           <li><a href="/index.html"> Home</a></li>
@@ -78,6 +83,12 @@
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
+      <p>
+        This website was coded by Ashlee Bartley & is
+        <a href="https://github.com/ashleenikol/portfolio-project.git"
+          >open-sourced</a
+        >.
+      </p>
     </footer>
   </body>
 </html>
