--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p>Hi! <br />I am</p>
       <h1>Ashlee Bartley</h1>
       <h2>front-end developer based in Kentucky</h2>
-      <a href="about.html" class="btn btn-dark px-3 py-3 mt-3">More About Me</a>
+      <a href="about.html" class="btn btn-dark px-3 py-3 mt-3" title="About Ashlee">More About Me</a>
     </div>
 
     <p class="content">Check out my favorite projects below!</p>
@@ -98,23 +98,25 @@
           <p class="text-muted">Let's work together!</p>
           </div>
           <div>
-          <a href="#" class="btn btn-dark px-3 py-3 mt-3">Contact me</a>
+          <a href="/contact.html" class="btn btn-dark px-3 py-3 mt-3" title="Contact Ashlee">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:ashleenikol13@gmail.com" class="email-link">ashleenikol13@gmail.com</a>
+        <a href="mailto:ashleenikol13@gmail.com" class="email-link" title="Email Ashlee">ashleenikol13@gmail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.twitter.com/ashleenikol" target="_blank">
+          <a href="https://www.twitter.com/ashleenikol" title="Ashlee Bartley's Twitter Page" target="_blank">
             <i class="fa-brands fa-twitter"></i>
           </a>
-        <a href="https://www.instagram.com/ashleenikol" target="_blank">
+        <a href="https://www.instagram.com/ashleenikol" title="Ashlee Bartley's Instagram Page" target="_blank">
 <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="https://www.github.com/ashleenikol" target="_blank">
+        <a href="https://www.github.com/ashleenikol" title="Ashlee Bartley's GitHub Page" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
         </div>
+                <p>This website was coded by Ashlee Bartley & is <a href="https://github.com/ashleenikol/portfolio-project.git">open-sourced</a>. </p>
+
       </footer>
     </div>
   </body>
