--- a/work.html
+++ b/work.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Projects of Ashlee Bartley, a frontend developer based in Kentucky."
+    />
+
     <title>Ashlee Bartley | Front-end developer based in Kentucky</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -35,13 +40,15 @@
           <img
             src="images/ABlogo.png"
             class="logo d-none d-lg-block"
-            alt="logo"
+            alt="Ashlee Bartley's logo"
         /></a>
         <ul>
-          <li><a href="/index.html"> Home</a></li>
-          <li><a href="/about.html"> About</a></li>
-          <li class="active"><a href="/work.html"> Work</a></li>
-          <li><a href="/contact.html"> Contact</a></li>
+          <li><a href="/index.html" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About Ashlee"> About</a></li>
+          <li class="active">
+            <a href="/work.html" title="Ashlee's Work"> Work</a>
+          </li>
+          <li><a href="/contact.html" title="Contact Ashlee"> Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -50,20 +57,31 @@
         <h1 class="mb-4">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="images/weather.png" class="img-fluid mb-3 rounded" />
+            <img
+              src="images/weather.png"
+              class="img-fluid mb-3 rounded"
+              alt="Weather Project Preview"
+            />
             <h3 class="text-center">Weather Project</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS, & Javascript
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/yoga.png" class="img-fluid mb-3 rounded" />
+            <img
+              src="images/yoga.png"
+              class="img-fluid mb-3 rounded"
+              alt="Yoga Project Preview"
+            />
             <h3 class="text-center">Yoga Project</h3>
             <p class="text-center text-muted">Built with HTML & CSS</p>
           </div>
         </div>
         <div class="contact-btn">
-          <a href="contact.html" class="btn btn-dark px-3 py-3 mt-3 mb-3"
+          <a
+            href="contact.html"
+            class="btn btn-dark px-3 py-3 mt-3 mb-3"
+            title="Contact Ashlee"
             >Contact me</a
           >
         </div>
@@ -71,16 +89,34 @@
     </div>
     <footer>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.twitter.com/ashleenikol" target="_blank">
+        <a
+          href="https://www.twitter.com/ashleenikol"
+          target="_blank"
+          title="Ashlee's Twitter"
+        >
           <i class="fa-brands fa-twitter"></i>
         </a>
-        <a href="https://www.instagram.com/ashleenikol" target="_blank">
+        <a
+          href="https://www.instagram.com/ashleenikol"
+          target="_blank"
+          title="Ashlee's Instagram"
+        >
           <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="https://www.github.com/ashleenikol" target="_blank">
+        <a
+          href="https://www.github.com/ashleenikol"
+          target="_blank"
+          title="Ashlee's GitHub"
+        >
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
+      <p>
+        This website was coded by Ashlee Bartley & is
+        <a href="https://github.com/ashleenikol/portfolio-project.git"
+          >open-sourced</a
+        >.
+      </p>
     </footer>
   </body>
 </html>
